# Core

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GED_Core.sln  LICENSE  LICENSE.md  README.md  init.sh
GED_CORE/: BitmapElementSize.cs  BmpSource.cs  CLPort.cs  CMakeLists.txt  Cam.cs  Camera.cs  Class1.cs  GED_CORE.csproj  Mgr.cs  iCam.cs
GED_CORE/Bmp/: BmpElSize.cs  BmpMgr.cs  BmpSource.cs
GED_CORE/CXX/: XClass.cs  XClassMem.cs
GED_CORE/Cam/: Cam.cs  CamCL.cs  CamCLMgr.cs  Rect.cs  RectCL.cs  RectCLMgr.cs  RectPrm.cs  iRect.cs  iRectEl.cs
GED_CORE/Ctrl/: Content.axaml  Content.axaml.cs  Event.cs  EventCircularQ.cs  MousePoint.cs
GED_CORE/DisplayWizard/: Bindable.cs  Foo.cs  LoopWin.cs  MainWin.cs  iWin.cs  iWinBuff.cs  iWinLoop.cs  iWinPtr.cs
GED_CORE/Manager/: Bitmap.cs
GED_CORE/Mov/: Col.cs
GED_CORE/SanityCheck/: Dim2.cs  DllNames.cs  Float.cs  FuckedNumbers.cs  OS.cs  States.cs  XClassMem.cs
GED_CORE/ViewModels/: ContentViewModel.cs
GED_CORE_HIN/Cam/: RectPrm.cs
GED_CORE_HIN/Ctrl/: MousePoint.cs
GED_CORE_HIN/DisplayWizard/: iWinPtr.cs
GED_CORE_HIN/SanityCheck/: Dim2.cs
GED_Core/: CMakeLists.txt
GED_Core/GED/Core/: Core.csproj  Test.cs
RCore/: CMakeLIsts.txt  CMakeLists.txt
RCore/include/GED/Core/: Camera.h  CircularQueue.h  Clock.h
RCore/include/GED/Core/Ctrl/: Event.h  MousePoint.h
RCore/src/: BmpSrc.c  Camera.c  CircularQueue.c  a.c  xCamera.cpp  xClock.cpp
RCore/src/Ctrl/: Event.c  MousePoint.c  xEvent.cpp
RCore/test/: CMakeLists.txt
RCore/test/test0x1/: a.c
docs/: Alloc_8h_source.html  Alloc_8hpp_source.html  Arr_8h_source.html  Arr_8hpp_source.html  BitVec_8h_source.html  BitVec_8hpp_source.html  Call_8h_source.html  Camera_8h_source.html  Cast_8h_source.html  CircularQueue_8h_source.html  Clock_8h_source.html  Compare_8h_source.html  Dot_8h_source.html  Dot_8hpp_source.html  Event_8h_source.html  Head_8h_source.html  Idxer_8h_source.html  Idxer_8hpp_source.html  MousePoint_8h_source.html  Src_8h_source.html  Src_8hpp_source.html  annotated.html  annotated_dup.js  classGED_1_1Core_1_1BmpSource-members.html  classGED_1_1Core_1_1BmpSource.html  classGED_1_1Core_1_1Camera-members.html  classGED_1_1Core_1_1Camera.html  classGED_1_1Core_1_1Camera.js  classGED_1_1Core_1_1Camera_1_1Element-members.html  classGED_1_1Core_1_1Camera_1_1Element.html  classGED_1_1Core_1_1Camera_1_1Element.js  classGED_1_1Core_1_1DisplayWizard_1_1MainWin-members.html  classGED_1_1Core_1_1DisplayWizard_1_1MainWin.html  classGED_1_1Core_1_1SanityCheck_1_1XClassMem-members.html  classGED_1_1Core_1_1SanityCheck_1_1XClassMem.html  classes.html  classtest_1_1App-members.html  classtest_1_1App.html  classtest_1_1MainWindow-members.html  classtest_1_1MainWindow.html  (+135 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  searchdata.js
hin/Cam/: RectPrm.cs.in
hin/Ctrl/: MousePoint.cs  MousePoint.cs.in
hin/DisplayWizard/: MainWin.cs.in  MinCtrlWin.cs
hin/SanityCheck/: Float.cs
test/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Resource1.Designer.cs  Resource1.resx  test.csproj
test/ViewModels/: MainViewModel.cs
